# FactoryTest

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Kconfig  README.md  SConstruct  vcpkg.json
assets/fonts/: kenny_keyboard_extra.txt
assets/i18n/: zh_CN.json
cmake/: cm0-package.cmake  version.h.in
cmake/templates/: factory-test-networkmanager.rules.in  factory_test.desktop.in  factory_test.postinst.in  factory_test.service.in
src/: main.cpp
src/app/: app.cpp  app.h  asset_manager.cpp  asset_manager.h  screen_manager.h  screen_namager.cpp
src/config/: lv_conf.h  lv_conf_cm0.h  lv_conf_desktop.h
src/logger/: logger.cpp  logger.h
src/model/: app_model.cpp  app_model.h  cap_cc1101_test_model.cpp  cap_cc1101_test_model.h  cap_fixture_test_model.cpp  cap_fixture_test_model.h  cap_lora_1262_test_model.cpp  cap_lora_1262_test_model.h  connectivity_test_model.cpp  connectivity_test_model.h  ir_fixture_test_model.cpp  ir_fixture_test_model.h  keyboard_test_model.cpp  keyboard_test_model.h  lcd_test_model.cpp  lcd_test_model.h  perf_test_model.cpp  perf_test_model.h  start_menu_model.cpp  start_menu_model.h  test_session.cpp  test_session.h  translation_service.cpp  translation_service.h
src/platform/: audio_service.cpp  audio_service.h  backlight_service.cpp  backlight_service.h  bluetooth_service.cpp  bluetooth_service.h  camera_service.cpp  camera_service.h  cap_cc1101_service.cpp  cap_cc1101_service.h  cap_fixture_service.cpp  cap_fixture_service.h  cap_lora_1262_service.cpp  cap_lora_1262_service.h  connectivity_service.cpp  connectivity_service.h  connectivity_types.h  cpu_benchmark_service.cpp  cpu_benchmark_service.h  device_info_service.cpp  device_info_service.h  ethernet_service.cpp  ethernet_service.h  gpio_service.cpp  gpio_service.h  hdmi_service.cpp  hdmi_service.h  i2c_service.cpp  i2c_service.h  imu_service.cpp  imu_service.h  input_switch_service.cpp  input_switch_service.h  ir_service.cpp  ir_service.h  link_service.cpp  link_service.h  linux_input.cpp  linux_input.h  power_service.cpp  (+15 more)
src/reactive/: bindings.cpp  bindings.h  subjects.cpp  subjects.h
src/serialization/: serialization.cpp  serialization.h
src/view/: theme.cpp  theme.h  ui_const.h
src/view/screens/: audio_test_page.cpp  audio_test_page.h  base_screen.cpp  base_screen.h  bt_page.cpp  bt_page.h  camera_test_page.cpp  camera_test_page.h  cap_cc1101_test_page.cpp  cap_cc1101_test_page.h  cap_fixture_test_page.cpp  cap_fixture_test_page.h  cap_lora_1262_test_page.cpp  cap_lora_1262_test_page.h  conn_test_page.cpp  conn_test_page.h  connectivity_bt_page.cpp  connectivity_eth_page.cpp  connectivity_eth_page.h  connectivity_ext_io_page.cpp  connectivity_hdmi_page.cpp  connectivity_hdmi_page.h  connectivity_i2c_page.cpp  connectivity_i2c_page.h  connectivity_link_page.cpp  connectivity_link_page.h  connectivity_spi_page.cpp  connectivity_spi_page.h  connectivity_subpage_common.cpp  connectivity_subpage_views.cpp  connectivity_subpage_views.h  connectivity_test_page.cpp  connectivity_test_page.h  connectivity_uart_page.cpp  connectivity_uart_page.h  connectivity_usb_page.cpp  connectivity_usb_page.h  connectivity_wifi_page.cpp  connectivity_wifi_page.h  device_info_page.cpp  (+51 more)
src/view/widgets/: base_widget.h  dialog.cpp  dialog.h  icon_button.cpp  icon_button.h  icon_card.cpp  icon_card.h  icon_list.cpp  icon_list.h  navbar.cpp  navbar.h  popup.cpp  popup.h  test_confirm_dialog.cpp  test_confirm_dialog.h  titlebar.cpp  titlebar.h
src/viewmodel/: app_viewmodel.cpp  app_viewmodel.h  connectivity_test_viewmodel.cpp  connectivity_test_viewmodel.h  keyboard_test_viewmodel.cpp  keyboard_test_viewmodel.h  lcd_test_viewmodel.cpp  lcd_test_viewmodel.h  perf_test_viewmodel.cpp  perf_test_viewmodel.h  start_menu_viewmodel.cpp  start_menu_viewmodel.h
